--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage --logHeapUsage --maxWorkers=2",
-    "build:dev": "rm -rf dist && webpack --mode development --config webpack.server.config.js && webpack --mode development --config webpack.dev.config.js",
-    "build:prod": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
-    "start": "node ./dist/server.js",
-    "buildAndStart": "npm run build:dev && node ./dist/server.js"
+    "build:dev": "rm -rf dist &&  NODE_OPTIONS=--openssl-legacy-provider webpack --mode development --config webpack.server.config.js && webpack --mode development --config webpack.dev.config.js",
+    "build:prod": "rm -rf dist && webpack --mode production --config webpack.server.config.js && NODE_OPTIONS=--openssl-legacy-provider webpack --mode production --config webpack.prod.config.js",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js",
+    "buildAndStart": "npm run build:dev &&  NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js ",
+    "buildAndStartError": "npm run build:dev || NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js "
   },
   "jest": {
     "moduleNameMapper": {
