--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "build:prod:legacy": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
     "start": "NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js",
     "start:legacy": " node ./dist/server.js",
-    "buildAndStart": "npm run build:dev &&  NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js ",
-    "buildAndStartError": "npm run build:dev || NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js "
+    "buildAndStart": "NODE_OPTIONS=--openssl-legacy-provider npm run build:dev &&  NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js "
   },
   "jest": {
     "moduleNameMapper": {
       "\\.(css|scss)$": "<rootDir>/__mocks__/style-mock.js",
       "\\.(gif|tff|eot|svg)": "<rootDir>/__mocks__/file-mock.js"
     },
-    "coverageReporters": ["cobertura", "text"],
+    "coverageReporters": [
+      "cobertura",
+      "text"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
@@ -36,6 +38,7 @@
   "homepage": "https://github.com/mskhirwar/react-express-webpack#readme",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "ejs": "^3.1.10",
     "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
