--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@playwright/test": "^1.39.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
