--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:prod:legacy": "rm -rf dist && webpack --mode production --config webpack.server.config.js && webpack --mode production --config webpack.prod.config.js",
     "start": "NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js",
     "start:legacy": " node ./dist/server.js",
-    "buildAndStart": "NODE_OPTIONS=--openssl-legacy-provider npm run build:dev &&  NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js "
+    "buildAndStart": "NODE_OPTIONS=--openssl-legacy-provider npm run build:dev &&  NODE_OPTIONS=--openssl-legacy-provider node ./dist/server.js ",
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider npx serve -s dist",
+    "buildAndServe": "npm run build:prod && npm run serve"
   },
   "jest": {
     "moduleNameMapper": {
